--- a/src/app/components/converter/converter.component.html
+++ b/src/app/components/converter/converter.component.html
@@ -4,7 +4,7 @@
   <div class="converter__block">
     <div class="converter__item">
       <h3>Convertation from:</h3>
-      <input type="number" [(ngModel)]="fromAmount" (input)="onFromAmountChange()" min="0" />
+      <input type="number" [(ngModel)]="fromAmount" (input)="onFromAmountChange()" min="0" placeholder="0" />
       <select [(ngModel)]="fromCurrency" (change)="onFromCurrencyChange()" >
         <!-- <option value="" disabled>Choose a currency</option> -->
         <option *ngFor="let currency of currencies" [value]="currency">{{ currency }}</option>
@@ -13,7 +13,7 @@
 
     <div class="converter__item">
       <h3>Result:</h3>
-      <input type="number" [(ngModel)]="toAmount" (input)="onToAmountChange()" min="0" />
+      <input type="number" [(ngModel)]="toAmount" (input)="onToAmountChange()" min="0" placeholder="0" />
       <select [(ngModel)]="toCurrency" (change)="onToCurrencyChange()">
         <!-- <option value="" disabled>Choose a currency</option> -->
         <option *ngFor="let currency of currencies" [value]="currency">{{ currency }}</option>
